--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "webpack": "^4.26.1"
   },
   "devDependencies": {
