--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "customer side for skippr with react/redux",
   "main": "index.js",
   "scripts": {
+    "webpack": "webpack",
+    "start:dev": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
